// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
/>
`;

exports[`Filter should render filter input with default placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="Filter"
      toggeable={true}
      value={undefined}
    />
    <Action
      bsStyle="link"
      className={undefined}
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      label="Remove filter"
      onClick={undefined}
    />
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="find something"
      toggeable={true}
      value={undefined}
    />
    <Action
      bsStyle="link"
      className={undefined}
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      label="Remove filter"
      onClick={undefined}
    />
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
/>
`;

exports[`Filter should render id if provided 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  hideLabel={true}
  icon="talend-search"
  id="toolbar-filter"
  label="Toggle filter"
  onClick={[Function]}
/>
`;

exports[`Filter should render only toggle icon 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
/>
`;
